src/skiacapi/cpp/skiacapi.h

CAPI unsigned char SkTileMode_Decal(void);
CAPI unsigned char SkFilterMode_Nearest(void);
CAPI unsigned char SkFilterMode_Linear(void);
CAPI unsigned char SkPathVerb_Move(void);
CAPI unsigned char SkPathVerb_Line(void);
CAPI unsigned char SkPathVerb_Quad(void);
CAPI unsigned char SkPathVerb_Cubic(void);
CAPI unsigned char SkPathVerb_Close(void);
CAPI unsigned char SkPaintCap_Butt(void);