src/main/java/com/loadingbyte/cinecred/natives/skiacapi/skiacapi_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkTileMode_Decal()
     * }
     */
    public static MemorySegment SkTileMode_Decal$address() {
        return SkTileMode_Decal.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkTileMode_Decal()
     * }
     */
    public static byte SkTileMode_Decal() {
        var mh$ = SkTileMode_Decal.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkTileMode_Decal");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkFilterMode_Nearest {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkFilterMode_Nearest");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Nearest()
     * }
     */
    public static FunctionDescriptor SkFilterMode_Nearest$descriptor() {
        return SkFilterMode_Nearest.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Nearest()
     * }
     */
    public static MethodHandle SkFilterMode_Nearest$handle() {
        return SkFilterMode_Nearest.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Nearest()
     * }
     */
    public static MemorySegment SkFilterMode_Nearest$address() {
        return SkFilterMode_Nearest.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Nearest()
     * }
     */
    public static byte SkFilterMode_Nearest() {
        var mh$ = SkFilterMode_Nearest.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkFilterMode_Nearest");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkFilterMode_Linear {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkFilterMode_Linear");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Linear()
     * }
     */
    public static FunctionDescriptor SkFilterMode_Linear$descriptor() {
        return SkFilterMode_Linear.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Linear()
     * }
     */
    public static MethodHandle SkFilterMode_Linear$handle() {
        return SkFilterMode_Linear.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Linear()
     * }
     */
    public static MemorySegment SkFilterMode_Linear$address() {
        return SkFilterMode_Linear.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkFilterMode_Linear()
     * }
     */
    public static byte SkFilterMode_Linear() {
        var mh$ = SkFilterMode_Linear.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkFilterMode_Linear");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPathVerb_Move {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPathVerb_Move");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Move()
     * }
     */
    public static FunctionDescriptor SkPathVerb_Move$descriptor() {
        return SkPathVerb_Move.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Move()
     * }
     */
    public static MethodHandle SkPathVerb_Move$handle() {
        return SkPathVerb_Move.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Move()
     * }
     */
    public static MemorySegment SkPathVerb_Move$address() {
        return SkPathVerb_Move.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Move()
     * }
     */
    public static byte SkPathVerb_Move() {
        var mh$ = SkPathVerb_Move.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPathVerb_Move");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPathVerb_Line {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPathVerb_Line");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Line()
     * }
     */
    public static FunctionDescriptor SkPathVerb_Line$descriptor() {
        return SkPathVerb_Line.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Line()
     * }
     */
    public static MethodHandle SkPathVerb_Line$handle() {
        return SkPathVerb_Line.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Line()
     * }
     */
    public static MemorySegment SkPathVerb_Line$address() {
        return SkPathVerb_Line.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Line()
     * }
     */
    public static byte SkPathVerb_Line() {
        var mh$ = SkPathVerb_Line.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPathVerb_Line");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPathVerb_Quad {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPathVerb_Quad");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Quad()
     * }
     */
    public static FunctionDescriptor SkPathVerb_Quad$descriptor() {
        return SkPathVerb_Quad.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Quad()
     * }
     */
    public static MethodHandle SkPathVerb_Quad$handle() {
        return SkPathVerb_Quad.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Quad()
     * }
     */
    public static MemorySegment SkPathVerb_Quad$address() {
        return SkPathVerb_Quad.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Quad()
     * }
     */
    public static byte SkPathVerb_Quad() {
        var mh$ = SkPathVerb_Quad.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPathVerb_Quad");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPathVerb_Cubic {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPathVerb_Cubic");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Cubic()
     * }
     */
    public static FunctionDescriptor SkPathVerb_Cubic$descriptor() {
        return SkPathVerb_Cubic.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Cubic()
     * }
     */
    public static MethodHandle SkPathVerb_Cubic$handle() {
        return SkPathVerb_Cubic.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Cubic()
     * }
     */
    public static MemorySegment SkPathVerb_Cubic$address() {
        return SkPathVerb_Cubic.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Cubic()
     * }
     */
    public static byte SkPathVerb_Cubic() {
        var mh$ = SkPathVerb_Cubic.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPathVerb_Cubic");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPathVerb_Close {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("SkPathVerb_Close");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Close()
     * }
     */
    public static FunctionDescriptor SkPathVerb_Close$descriptor() {
        return SkPathVerb_Close.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Close()
     * }
     */
    public static MethodHandle SkPathVerb_Close$handle() {
        return SkPathVerb_Close.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Close()
     * }
     */
    public static MemorySegment SkPathVerb_Close$address() {
        return SkPathVerb_Close.ADDR;
    }

    /**
     * {@snippet lang=c :
     * unsigned char SkPathVerb_Close()
     * }
     */
    public static byte SkPathVerb_Close() {
        var mh$ = SkPathVerb_Close.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("SkPathVerb_Close");
            }
            return (byte)mh$.invokeExact();
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class SkPaintCap_Butt {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            skiacapi_h.C_CHAR    );
